(Bug Fix) Bug: Method org.gwt.mosaic.ui.client.table.property.HeaderPropertyBase.setHeader(int, Object) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead